--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@slack/client": "^3.8.1",
     "array-merge-by-key": "^1.0.1",
     "ampath-json-query-gen": "git+https://github.com/AMPATH/ampath-json-query-gen.git#v1.0.0-alpha9",
-    "ampath-json2sql": "git+https://github.com/AMPATH/ampath-json2sql.git#v1.0.8",
+    "ampath-json2sql": "git+https://github.com/AMPATH/ampath-json2sql.git#v1.0.9",
+    "async": "^2.6.0",
     "babel": "^6.5.2",
     "bcryptjs": "^2.4.3",
     "bluebird": "^3.4.0",
